versioned_docs/version-2.12/reference/subsystems/helm.mdx
---
title: helm
description: |
  The Helm command line (https://helm.sh)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Helm command line (https://helm.sh)

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

Config section: <span className="color--primary">`[helm]`</span>

<span className={styles.options}>

## Basic options

### `registries`

<Option
  cli_repr={`--helm-registries="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_HELM_REGISTRIES'
  toml_repr={`[helm.registries]
key1 = val1
key2 = val2
...`}
  default_repr={`{}`}
>

Configure Helm OCI registries. The schema for a registry entry is as follows:

```
{
    "registry-alias": {
        "address": "oci://registry-domain:port",
        "default": bool,
    },
    ...
}
```

If no registries are provided in either a `helm_chart` target, then all default addresses will be used, if any.

The `helm_chart.registries` may be provided with a list of registry addresses and registry alias prefixed with `@` to be used instead of the defaults.

A configured registry is marked as default either by setting `default = true` or with an alias of `"default"`.

Registries also participate in resolving third party Helm charts uplodaded to those registries.

</Option>

### `lint_strict`

<Option
  cli_repr={`--[no-]helm-lint-strict`}
  env_repr='PANTS_HELM_LINT_STRICT'
  toml_repr={`[helm]
lint_strict = <bool>`}
  default_repr={`False`}
>

Enables strict linting of Helm charts

</Option>

### `default_registry_repository`

<Option
  cli_repr={`--helm-default-registry-repository=<str>`}
  env_repr='PANTS_HELM_DEFAULT_REGISTRY_REPOSITORY'
  toml_repr={`[helm]
default_registry_repository = <str>`}
  default_repr={`None`}
>

Default location where to push Helm charts in the available registries when no specific one has been given.

If no registry repository is given, charts will be pushed to the root of the OCI registry.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--helm-version=<str>`}
  env_repr='PANTS_HELM_VERSION'
  toml_repr={`[helm]
version = <str>`}
  default_repr={`3.8.0`}
>

Use this version of helmsubsystem.

</Option>

### `known_versions`

<Option
  cli_repr={`--helm-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_HELM_KNOWN_VERSIONS'
  toml_repr={`[helm]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "3.8.0|linux_arm64 |23e08035dc0106fe4e0bd85800fd795b2b9ecd9f32187aa16c49b0a917105161|12324642",\n  "3.8.0|linux_x86_64|8408c91e846c5b9ba15eb6b1a5a79fc22dd4d33ac6ea63388e5698d1b2320c8b|13626774",\n  "3.8.0|macos_arm64 |751348f1a4a876ffe089fd68df6aea310fd05fe3b163ab76aa62632e327122f3|14078604",\n  "3.8.0|macos_x86_64|532ddd6213891084873e5c2dcafa577f425ca662a6594a3389e288fc48dc2089|14318316"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

```
- `version` is the version string
- `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emitted by
`wc -c`
```

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--helm-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_HELM_USE_UNSUPPORTED_VERSION'
  toml_repr={`[helm]
use_unsupported_version = <UnsupportedVersionUsage>`}
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of helmsubsystem is not supported.

Supported helmsubsystem versions: unspecified

</Option>

### `url_template`

<Option
  cli_repr={`--helm-url-template=<str>`}
  env_repr='PANTS_HELM_URL_TEMPLATE'
  toml_repr={`[helm]
url_template = <str>`}
  default_repr={`https://get.helm.sh/helm-v{version}-{platform}.tar.gz`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.12/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--helm-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_HELM_URL_PLATFORM_MAPPING'
  toml_repr={`[helm.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "linux_arm64": "linux-arm64",\n  "linux_x86_64": "linux-amd64",\n  "macos_arm64": "darwin-arm64",\n  "macos_x86_64": "darwin-amd64"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}`, and run Pants on Linux with an intel architecture, then `{platform}` will be substituted in the --url-template option with unknown-linux.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
